objects/BMCServiceDesk__SYSNode__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Level__c</fullName>
        <label>Node Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Navigator__c</fullName>
        <label>FKNavigator</label>
        <referenceTo>BMCServiceDesk__SYSNavigator__c</referenceTo>
        <relationshipLabel>SYS Nodes</relationshipLabel>
        <relationshipName>Nodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PageReference__c</fullName>
        <label>Page Reference</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKParentNode</label>
        <referenceTo>BMCServiceDesk__SYSNode__c</referenceTo>
        <relationshipLabel>SYS Nodes</relationshipLabel>
        <relationshipName>Nodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Section__c</fullName>
        <label>Section</label>
        <picklist>
            <picklistValues>
                <fullName>Workspaces</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Tip__c</fullName>
        <label>Tip</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>